@@ -1,3 +1,7 @@
+
+
+Remove information files from tmp (can be changed in vrrpd.h VRRP_PIDDIR_DFL) 
+
 23/06/2015 vrrpd 1.13
 
 Vrrpd security: Daemon cannot start with the same VRID than other - and different password - 
